fix(checkbox): align label with checkbox

--- a/packages/components/src/components/checkbox/checkbox.css
+++ b/packages/components/src/components/checkbox/checkbox.css
@@ -106,6 +106,7 @@ scale-checkbox [part='icon'] svg path {
 }
 
 scale-checkbox [part='container'] {
+  align-items: center;
   display: flex;
 }
 
